Archive2/e7/434ee2e0f32c56/output
main.cpp: In member function 'Second::operator First() const':
main.cpp:7:3: error: 'First::~First()' is protected
   ~First() = default;
   ^
main.cpp:14:18: error: within this context
     return First();
                  ^
main.cpp: In instantiation of 'Host<cardinal_policy>::Host(const Host<o_c_p>&) [with o_c_p = Second; cardinal_policy = First]':
main.cpp:42:32:   required from here
main.cpp:7:3: error: 'First::~First()' is protected
   ~First() = default;
   ^
main.cpp:34:28: error: within this context
   : cardinal_policy( other )
                            ^
